# advent-of-code-solutions

./: .gitignore  CMakeLists.txt  README.md
2018/: 12.txt  4ex.txt  Matmakefile
2018/src/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
2019/: Matmakefile
2019/go/: 1.go
2019/py/: 1.py  2.py
2019/src/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp
2020/: Makefile  Matmakefile
2020/src/: d1.cpp  d2.cpp  d3.cpp  d4.cpp
2021/: Matmakefile
2021/src/: 01.cpp  02.cpp  03.cpp
2022/: CMakeLists.txt  create-day.cpp
2022/hs/: 01.hs
2022/src/: 2022-01.cpp  2022-02.cpp  2022-03.cpp  2022-04.cpp  2022-05.cpp  2022-06.cpp  2022-07.cpp  2022-08.cpp  input.h
2023/: CMakeLists.txt  test.cpp
2023/src/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp
2024/: CMakeLists.txt
2024/data/: 14.txt  18.txt  19-filtered-test.txt  19-filtered.txt
2024/src/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19-filter.sh  19-regex.sh  19.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  template.cpp
