project(aoc-2024)



function(day name)
    add_executable(2024-${name} src/${name}.cpp)
    target_compile_features(
        2024-${name} PRIVATE cxx_std_23)
    add_test(NAME 2024-${name} COMMAND ${name})
endfunction()

file(COPY data DESTINATION .)

file(GLOB SCRIPTS src/*.sh)
file(COPY ${SCRIPTS} DESTINATION .)

day(01)
day(02)
day(03)
day(04)
day(05)
day(06)
day(07)
day(08)
day(09)
day(10)
day(11)
day(12)
day(13)
day(14)
day(15)
day(16)
day(17)
day(18)
day(19)
day(20)
day(21)
day(22)
day(23)
day(24)
